crates/stackable-versioned/src/tests/snapshots/stackable_versioned__tests__fail@unkown_desired_version.json.snap
---
source: crates/stackable-versioned/src/tests/mod.rs
expression: formatted
input_file: crates/stackable-versioned/src/tests/fixtures/inputs/fail/unkown_desired_version.json
---
{
  "apiVersion": "apiextensions.k8s.io/v1",
  "kind": "ConversionReview",
  "response": {
    "uid": "c4e55572-ee1f-4e94-9097-28936985d45f",
    "result": {
      "status": "Failure",
      "code": 400,
      "message": "unknown desired API version \"test.stackable.tech/v99\"",
      "reason": "unknown desired API version \"test.stackable.tech/v99\""
    },
    "convertedObjects": []
  }
}
